--- a/main/sass/main.css
+++ b/main/sass/main.css
@@ -96,7 +96,6 @@
 }
 
 .text-neon-red {
-  color: #FF1177;
   -webkit-animation: neon-red 1.5s ease-in-out infinite alternate;
   animation: neon-red 1.5s ease-in-out infinite alternate;
 }
